--- a/src/Features/Features.csproj
+++ b/src/Features/Features.csproj
@@ -8,4 +8,7 @@
     <PackageReference Include="Qml.Net" Version="0.1.2" />
     <PackageReference Include="Qml.Net.WindowsBinaries" Version="0.1.2" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="**\*.qmlc" />
+  </ItemGroup>
 </Project>
