--- a/src/Features/Features.csproj
+++ b/src/Features/Features.csproj
@@ -5,10 +5,11 @@
     <RunWorkingDirectory>$(MSBuildProjectDirectory)</RunWorkingDirectory>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Qml.Net" Version="0.1.2" />
-    <PackageReference Include="Qml.Net.WindowsBinaries" Version="0.1.2" />
+    <None Remove="**\*.qmlc" />
   </ItemGroup>
   <ItemGroup>
-    <None Remove="**\*.qmlc" />
+    <PackageReference Include="Qml.Net" Version="0.1.3" />
+    <PackageReference Include="Qml.Net.OSXBinaries" Version="0.1.3" />
+    <PackageReference Include="Qml.Net.WindowsBinaries" Version="0.1.3" />
   </ItemGroup>
 </Project>
