--- a/src/Features/Features.csproj
+++ b/src/Features/Features.csproj
@@ -8,8 +8,9 @@
     <None Remove="**\*.qmlc" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Qml.Net" Version="0.1.3" />
-    <PackageReference Include="Qml.Net.OSXBinaries" Version="0.1.3" />
-    <PackageReference Include="Qml.Net.WindowsBinaries" Version="0.1.3" />
+    <PackageReference Include="Qml.Net" Version="0.1.4" />
+    <PackageReference Include="Qml.Net.OSXBinaries" Version="0.1.4" />
+    <PackageReference Include="Qml.Net.WindowsBinaries" Version="0.1.4" />
+    <PackageReference Include="Qml.Net.LinuxBinaries" Version="0.1.4" />
   </ItemGroup>
 </Project>
