--- a/src/Features/Features.csproj
+++ b/src/Features/Features.csproj
@@ -1,17 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
     <RunWorkingDirectory>$(MSBuildProjectDirectory)</RunWorkingDirectory>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="**\*.qmlc" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Qml.Net" Version="0.8.0" />
-    <PackageReference Include="Qml.Net.LinuxBinaries" Version="0.8.0" />
-    <PackageReference Include="Qml.Net.OSXBinaries" Version="0.8.0" />
-    <PackageReference Include="Qml.Net.WindowsBinaries" Version="0.8.0" />
+    <PackageReference Include="Qml.Net" Version="0.9.0-alpha.5" />
+    <PackageReference Include="Qml.Net.WindowsBinaries" Version="0.9.0-alpha.5" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="images\**" CopyToPublishDirectory="Always" />
